Examples/mona_outputs/alt_succession.out
MONA v1.4-17 for WS1S/WS2S
Copyright (C) 1997-2013 Aarhus University

PARSING
Error in file 'fol/alt_succession.fol' line 6 column 12
  var2 B, A, B;
             ^
'B' already declared
Execution aborted
